Update title and logo in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Marc Kiritu Wanjeru | IT Systems Specialist</title>
+  <title>John Mark Kiritu | IT Systems Specialist</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
@@ -203,7 +203,7 @@
 
   <!-- NAV -->
   <nav>
-    <strong>MK</strong>
+   <img src="logo.png" alt="Marc Wanjeru Logo" class="logo">
     <ul>
       <li><a href="#home">Home</a></li>
       <li><a href="#about">About</a></li>
