Update title from IT Systems to IT Support Specialist

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>John Mark Kiritu | IT Systems Specialist</title>
+  <title>John Mark Kiritu | IT Support Specialist</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
