--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           rgba(0,0,0,0.7),
           rgba(0,0,0,0.7)
         ),
-        url("https://images.unsplash.com/photo-1518770660439-4636190af475")
+        url("https://unsplash.com/photos/a-computer-desk-with-speakers-a-keyboard-and-a-monitor-OczHGE0Xs3c")
         center/cover no-repeat;
       display: flex;
       align-items: center;
