--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
       color: #00bcd4;
       text-decoration: none;
     }
+    .logo {
+  height: 42px;
+  width: auto;
+  background: #ffffff;
+  padding: 6px 10px;
+  border-radius: 8px;
+}
+
 
     /* NAV */
     nav {
