--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
   <!-- NAV -->
   <nav>
-   <img src="" alt="Marc Wanjeru Logo" class="logo">
+   <img src="logo.png" alt="Marc Wanjeru Logo" class="logo">
     <ul>
       <li><a href="#home">Home</a></li>
       <li><a href="#about">About</a></li>
