--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           rgba(0,0,0,0.7),
           rgba(0,0,0,0.7)
         ),
-        url("https://unsplash.com/photos/a-computer-desk-with-speakers-a-keyboard-and-a-monitor-OczHGE0Xs3c")
+          <img src="desktop.jpgg" alt="wallpaper" class="background image">
         center/cover no-repeat;
       display: flex;
       align-items: center;
