--- a/index.html
+++ b/index.html
@@ -410,6 +410,43 @@
       </div>
     </div>
   </section>
+<section id="technologies" class="fade">
+  <h2>Technologies & Platforms</h2>
+
+  <div class="tech-grid">
+
+    <div class="tech">
+      <img src="assets/tech/cisco.png" alt="Cisco">
+      <p>Cisco / Networking</p>
+    </div>
+
+    <div class="tech">
+      <img src="assets/tech/windows.png" alt="Windows">
+      <p>Windows & Server</p>
+    </div>
+
+    <div class="tech">
+      <img src="assets/tech/linux.png" alt="Linux">
+      <p>Linux (Ubuntu)</p>
+    </div>
+
+    <div class="tech">
+      <img src="assets/tech/microsoft365.png" alt="Microsoft 365">
+      <p>Microsoft 365</p>
+    </div>
+
+    <div class="tech">
+      <img src="assets/tech/kaspersky.png" alt="Kaspersky">
+      <p>Cybersecurity</p>
+    </div>
+
+    <div class="tech">
+      <img src="assets/tech/jira.png" alt="Jira">
+      <p>ITSM Tools</p>
+    </div>
+
+  </div>
+</section>
 
   <!-- CONTACT -->
   <section id="contact" class="fade">
