Update Cisco image source to use URL

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
   <div class="tech-grid">
 
     <div class="tech">
-      <img src="cisco.png" alt="Cisco">
+      <img src="https://brand-assets.security.cisco.com/cisco-light.svg" alt="Cisco">
       <p>Cisco / Networking</p>
     </div>
 
