Replace Cisco logo and add new technology entries

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
   <div class="tech-grid">
 
     <div class="tech">
-      <img src="https://brand-assets.security.cisco.com/cisco-light.svg" alt="Cisco">
+      <img src="cisco.png" alt="Cisco">
       <p>Cisco / Networking</p>
     </div>
 
@@ -437,6 +437,14 @@
 
     <div class="tech">
       <img src="kaspersky.png" alt="Kaspersky">
+      <p>Cybersecurity</p>
+    </div>
+     <div class="tech">
+      <img src="team viewer.png" alt="team viewer">
+      <p>ITSM Tools</p>
+    </div>
+     <div class="tech">
+      <img src="sophos.png" alt="sophos">
       <p>Cybersecurity</p>
     </div>
 
