Update Microsoft 365 image source in index.html

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
     </div>
 
     <div class="tech">
-      <img src="microsoft365.png" alt="Microsoft 365">
+      <img src="microsoft.png" alt="Microsoft 365">
       <p>Microsoft 365</p>
     </div>
 
