--- a/index.html
+++ b/index.html
@@ -104,33 +104,19 @@ h2{font-size:36px;margin-bottom:20px;color:#00bcd4}
   border-radius:50%
 }
 
-/* EXPERIENCE */
-.job{
-  margin-bottom:35px;
-  padding-left:20px;
-  border-left:2px solid #00bcd4
-}
-
-/* TECHNOLOGY SLIDER */
-.tech-slider-wrapper{position:relative;margin-top:40px}
-.tech-grid{
+/* SLIDER BASE (TECH + PROJECTS) */
+.slider-wrapper{position:relative;margin-top:40px}
+.slider-grid{
   display:flex;
   gap:40px;
   overflow-x:auto;
   scroll-behavior:smooth;
   padding:20px 60px
 }
-.tech-grid::-webkit-scrollbar{display:none}
-.tech{
-  min-width:120px;
-  text-align:center;
-  flex-shrink:0
-}
-.tech img{height:48px}
-.tech p{margin-top:10px;font-size:14px}
+.slider-grid::-webkit-scrollbar{display:none}
 
 /* ARROWS */
-.tech-arrow{
+.slider-arrow{
   position:absolute;
   top:50%;
   transform:translateY(-50%);
@@ -144,9 +130,43 @@ h2{font-size:36px;margin-bottom:20px;color:#00bcd4}
   cursor:pointer;
   z-index:10
 }
-.tech-arrow:hover{background:#00bcd4;color:#000}
-.tech-arrow.left{left:10px}
-.tech-arrow.right{right:10px}
+.slider-arrow:hover{background:#00bcd4;color:#000}
+.slider-arrow.left{left:10px}
+.slider-arrow.right{right:10px}
+
+/* TECHNOLOGIES */
+.tech{
+  min-width:120px;
+  text-align:center;
+  flex-shrink:0
+}
+.tech img{height:48px}
+.tech p{margin-top:10px;font-size:14px}
+
+/* PROJECTS */
+.project-card{
+  min-width:260px;
+  background:#121720;
+  border-radius:12px;
+  padding:20px;
+  flex-shrink:0
+}
+.project-card h3{margin-bottom:10px;color:#00bcd4}
+.project-card p{font-size:14px;opacity:.9}
+
+/* STORIES */
+.stories{
+  max-width:900px;
+  margin:auto;
+}
+.story{
+  background:#121720;
+  padding:25px;
+  border-radius:12px;
+  margin-bottom:25px
+}
+.story h3{margin-bottom:10px;color:#00bcd4}
+.story p{font-size:15px;opacity:.9}
 
 /* FOOTER */
 footer{text-align:center;padding:30px;background:#070a0f}
@@ -188,6 +208,8 @@ footer{text-align:center;padding:30px;background:#070a0f}
 <li><a href="#home">Home</a></li>
 <li><a href="#about">About</a></li>
 <li><a href="#journey">Journey</a></li>
+<li><a href="#projects">Projects</a></li>
+<li><a href="#stories">Stories</a></li>
 <li><a href="#technologies">Technologies</a></li>
 <li><a href="#contact">Contact</a></li>
 </ul>
@@ -207,8 +229,8 @@ footer{text-align:center;padding:30px;background:#070a0f}
 <h2>About Me</h2>
 <div class="about">
 <p>
-IT Systems Specialist with experience in networking, cybersecurity,
-enterprise support, and infrastructure operations.
+IT Systems Specialist with experience in enterprise IT support, networking,
+cybersecurity, and infrastructure operations.
 </p>
 <img src="image" alt="Profile">
 </div>
@@ -218,9 +240,76 @@ enterprise support, and infrastructure operations.
 <section id="journey" class="fade">
 <h2>Professional Journey</h2>
 <div class="timeline-journey">
-<div class="timeline-item"><h3>IT Foundations</h3><p>Hands-on IT support and troubleshooting.</p></div>
-<div class="timeline-item"><h3>Enterprise Exposure</h3><p>NGO and logistics environments.</p></div>
-<div class="timeline-item"><h3>Systems & Security</h3><p>Infrastructure, networking and cybersecurity.</p></div>
+<div class="timeline-item"><h3>Foundations</h3><p>Hands-on IT support and troubleshooting.</p></div>
+<div class="timeline-item"><h3>Enterprise Growth</h3><p>NGO and logistics infrastructure environments.</p></div>
+<div class="timeline-item"><h3>Systems & Security</h3><p>Infrastructure, networking, and cybersecurity.</p></div>
+</div>
+</section>
+
+<!-- PROJECTS -->
+<section id="projects" class="fade">
+<h2>Projects</h2>
+
+<div class="slider-wrapper">
+<button class="slider-arrow left" onclick="scrollSlider('projectsGrid',-1)">‹</button>
+<button class="slider-arrow right" onclick="scrollSlider('projectsGrid',1)">›</button>
+
+<div class="slider-grid" id="projectsGrid">
+
+<div class="project-card">
+<h3>IT Infrastructure Upgrade</h3>
+<p>Designed and deployed LAN, wireless networks, and endpoint security.</p>
+</div>
+
+<div class="project-card">
+<h3>Endpoint Security Deployment</h3>
+<p>Implemented Kaspersky Security Center for enterprise endpoint protection.</p>
+</div>
+
+<div class="project-card">
+<h3>Digital Logistics System</h3>
+<p>Built internal systems to support logistics and procurement operations.</p>
+</div>
+
+<div class="project-card">
+<h3>Microsoft 365 Administration</h3>
+<p>Managed users, permissions, and collaboration tools.</p>
+</div>
+
+</div>
+</div>
+</section>
+
+<!-- STORIES -->
+<section id="stories" class="fade">
+<h2>Stories & Experiences</h2>
+
+<div class="stories">
+
+<div class="story">
+<h3>Working in High-Impact Environments</h3>
+<p>
+Supporting NGO operations taught me how critical system uptime and security
+are when technology directly supports humanitarian work.
+</p>
+</div>
+
+<div class="story">
+<h3>Learning Through Challenges</h3>
+<p>
+From network failures to security incidents, each challenge strengthened my
+problem-solving and decision-making skills.
+</p>
+</div>
+
+<div class="story">
+<h3>Growth Beyond Technical Skills</h3>
+<p>
+Collaborating with diverse teams improved my communication, documentation,
+and leadership abilities.
+</p>
+</div>
+
 </div>
 </section>
 
@@ -228,11 +317,11 @@ enterprise support, and infrastructure operations.
 <section id="technologies" class="fade">
 <h2>Technologies & Platforms</h2>
 
-<div class="tech-slider-wrapper">
-<button class="tech-arrow left" onclick="scrollTech(-1)">‹</button>
-<button class="tech-arrow right" onclick="scrollTech(1)">›</button>
+<div class="slider-wrapper">
+<button class="slider-arrow left" onclick="scrollSlider('techGrid',-1)">‹</button>
+<button class="slider-arrow right" onclick="scrollSlider('techGrid',1)">›</button>
 
-<div class="tech-grid" id="techGrid">
+<div class="slider-grid" id="techGrid">
 <a class="tech" href="https://www.cisco.com" target="_blank"><img src="cisco.png"><p>Cisco</p></a>
 <a class="tech" href="https://www.microsoft.com/windows" target="_blank"><img src="windows.png"><p>Windows</p></a>
 <a class="tech" href="https://ubuntu.com" target="_blank"><img src="linux.png"><p>Linux</p></a>
@@ -253,9 +342,7 @@ enterprise support, and infrastructure operations.
 <!-- FOOTER -->
 <footer>
 <p>© 2026 John Mark Kiritu</p>
-<p>
-<a href="https://www.linkedin.com" target="_blank">🔗 LinkedIn</a>
-</p>
+<p><a href="https://www.linkedin.com" target="_blank">🔗 LinkedIn</a></p>
 </footer>
 
 <!-- WHATSAPP FLOAT -->
@@ -269,9 +356,8 @@ entries.forEach(e=>{if(e.isIntersecting)e.target.classList.add('show')});
 },{threshold:.2});
 faders.forEach(f=>observer.observe(f));
 
-function scrollTech(direction){
-  const grid=document.getElementById("techGrid");
-  grid.scrollLeft+=direction*250;
+function scrollSlider(id,direction){
+  document.getElementById(id).scrollLeft+=direction*260;
 }
 </script>
 
