--- a/index.html
+++ b/index.html
@@ -1,364 +1,277 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<title>John Mark Kiritu | IT Support Specialist</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8" />
+  <title>John Mark Kiritu | IT Systems Specialist</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<style>
-/* GLOBAL */
-*{margin:0;padding:0;box-sizing:border-box}
-html{scroll-behavior:smooth}
-body{
-  font-family:"Segoe UI",sans-serif;
-  background:#0b0f14;
-  color:#e6e6e6;
-  line-height:1.6
-}
-a{color:#00bcd4;text-decoration:none}
+  <!-- ICONS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-/* LOGO */
-.logo{
-  height:42px;
-  background:#fff;
-  padding:6px 10px;
-  border-radius:8px
-}
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-/* NAV */
-nav{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:20px 60px;
-  position:fixed;
-  width:100%;
-  background:rgba(11,15,20,.9);
-  z-index:1000
-}
-nav ul{display:flex;gap:25px;list-style:none}
+    body {
+      font-family: "Segoe UI", sans-serif;
+      background: #0b0f14;
+      color: #e6e6e6;
+      line-height: 1.6;
+    }
 
-/* HERO */
-header{
-  height:100vh;
-  background:
-    linear-gradient(rgba(0,0,0,.7),rgba(0,0,0,.7)),
-    url("desktop.jpgg") center/cover no-repeat;
-  display:flex;
-  align-items:center;
-  padding:0 60px
-}
-.hero-text{animation:slideIn 1.2s ease forwards}
-@keyframes slideIn{
-  from{opacity:0;transform:translateX(-40px)}
-  to{opacity:1;transform:translateX(0)}
-}
-.hero-text h1{font-size:60px}
-.hero-text span{color:#00bcd4}
-.hero-text p{margin:15px 0 30px;font-size:20px}
-.btn{
-  padding:12px 30px;
-  border:1px solid #00bcd4;
-  border-radius:30px;
-  margin-right:15px;
-  transition:.3s
-}
-.btn:hover{background:#00bcd4;color:#000}
+    a {
+      color: #00bcd4;
+      text-decoration: none;
+    }
 
-/* SECTIONS */
-section{padding:100px 60px;max-width:1200px;margin:auto}
-h2{font-size:36px;margin-bottom:20px;color:#00bcd4}
+    /* NAVBAR */
+    nav {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background: rgba(11,15,20,0.95);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 50px;
+      z-index: 1000;
+    }
 
-/* FADE */
-.fade{opacity:0;transform:translateY(30px);transition:.8s}
-.fade.show{opacity:1;transform:none}
+    nav ul {
+      display: flex;
+      list-style: none;
+      gap: 25px;
+    }
 
-/* ABOUT */
-.about{
-  display:grid;
-  grid-template-columns:1fr 1fr;
-  gap:40px;
-  align-items:center
-}
-.about img{width:100%;border-radius:10px}
+    nav li a {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      font-size: 14px;
+    }
 
-/* JOURNEY */
-.timeline-journey{
-  max-width:900px;
-  margin:auto;
-  border-left:2px solid #00bcd4;
-  padding-left:30px
-}
-.timeline-item{
-  margin-bottom:35px;
-  position:relative
-}
-.timeline-item::before{
-  content:"";
-  position:absolute;
-  left:-41px;
-  top:6px;
-  width:14px;
-  height:14px;
-  background:#00bcd4;
-  border-radius:50%
-}
+    .logo {
+      height: 40px;
+      background: #fff;
+      padding: 6px 10px;
+      border-radius: 8px;
+    }
 
-/* SLIDER BASE (TECH + PROJECTS) */
-.slider-wrapper{position:relative;margin-top:40px}
-.slider-grid{
-  display:flex;
-  gap:40px;
-  overflow-x:auto;
-  scroll-behavior:smooth;
-  padding:20px 60px
-}
-.slider-grid::-webkit-scrollbar{display:none}
+    /* HERO */
+    header {
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      padding: 0 60px;
+      background: linear-gradient(rgba(0,0,0,.75), rgba(0,0,0,.75)),
+        url("desktop.jpgg") center/cover no-repeat;
+    }
 
-/* ARROWS */
-.slider-arrow{
-  position:absolute;
-  top:50%;
-  transform:translateY(-50%);
-  background:rgba(0,188,212,.15);
-  border:1px solid #00bcd4;
-  color:#00bcd4;
-  font-size:28px;
-  width:44px;
-  height:44px;
-  border-radius:50%;
-  cursor:pointer;
-  z-index:10
-}
-.slider-arrow:hover{background:#00bcd4;color:#000}
-.slider-arrow.left{left:10px}
-.slider-arrow.right{right:10px}
+    .hero-text h1 {
+      font-size: 58px;
+    }
 
-/* TECHNOLOGIES */
-.tech{
-  min-width:120px;
-  text-align:center;
-  flex-shrink:0
-}
-.tech img{height:48px}
-.tech p{margin-top:10px;font-size:14px}
+    .hero-text span {
+      color: #00bcd4;
+    }
 
-/* PROJECTS */
-.project-card{
-  min-width:260px;
-  background:#121720;
-  border-radius:12px;
-  padding:20px;
-  flex-shrink:0
-}
-.project-card h3{margin-bottom:10px;color:#00bcd4}
-.project-card p{font-size:14px;opacity:.9}
+    .btn {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 30px;
+      border: 1px solid #00bcd4;
+      border-radius: 30px;
+      transition: .3s;
+    }
 
-/* STORIES */
-.stories{
-  max-width:900px;
-  margin:auto;
-}
-.story{
-  background:#121720;
-  padding:25px;
-  border-radius:12px;
-  margin-bottom:25px
-}
-.story h3{margin-bottom:10px;color:#00bcd4}
-.story p{font-size:15px;opacity:.9}
+    .btn:hover {
+      background: #00bcd4;
+      color: #000;
+    }
 
-/* FOOTER */
-footer{text-align:center;padding:30px;background:#070a0f}
+    section {
+      padding: 100px 60px;
+      max-width: 1200px;
+      margin: auto;
+    }
 
-/* WHATSAPP FLOAT */
-.whatsapp-float{
-  position:fixed;
-  bottom:25px;
-  right:25px;
-  background:#25D366;
-  color:#fff;
-  width:56px;
-  height:56px;
-  border-radius:50%;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-size:28px;
-  z-index:999
-}
-.whatsapp-float:hover{opacity:.8}
+    h2 {
+      color: #00bcd4;
+      margin-bottom: 25px;
+    }
 
-/* RESPONSIVE */
-@media(max-width:900px){
-  .about{grid-template-columns:1fr}
-  header{padding:0 30px}
-  nav{padding:20px 30px}
-  .hero-text h1{font-size:42px}
-}
-</style>
+    .fade {
+      opacity: 0;
+      transform: translateY(30px);
+      transition: .8s;
+    }
+
+    .fade.show {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    /* JOURNEY */
+    .timeline-journey {
+      border-left: 2px solid #00bcd4;
+      padding-left: 30px;
+    }
+
+    .timeline-item {
+      margin-bottom: 30px;
+    }
+
+    /* TECHNOLOGIES SLIDER */
+    .tech-wrapper {
+      position: relative;
+      overflow: hidden;
+    }
+
+    .tech-slider {
+      display: flex;
+      gap: 40px;
+      transition: transform 0.5s ease;
+    }
+
+    .tech {
+      min-width: 120px;
+      text-align: center;
+    }
+
+    .tech img {
+      height: 50px;
+    }
+
+    .arrow {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      font-size: 30px;
+      cursor: pointer;
+      color: #00bcd4;
+      z-index: 10;
+    }
+
+    .arrow.left { left: 0; }
+    .arrow.right { right: 0; }
+
+    /* CONTACT */
+    .contact-icons a {
+      font-size: 26px;
+      margin-right: 20px;
+    }
+
+    /* WHATSAPP FLOAT */
+    .whatsapp-float {
+      position: fixed;
+      bottom: 25px;
+      right: 25px;
+      background: #25D366;
+      color: #fff;
+      padding: 14px 16px;
+      border-radius: 50%;
+      font-size: 26px;
+      z-index: 1000;
+    }
+
+    footer {
+      text-align: center;
+      padding: 30px;
+      background: #070a0f;
+      font-size: 14px;
+    }
+  </style>
 </head>
 
 <body>
 
-<!-- NAV -->
 <nav>
-<img src="logo.png" class="logo" alt="Logo">
-<ul>
-<li><a href="#home">Home</a></li>
-<li><a href="#about">About</a></li>
-<li><a href="#journey">Journey</a></li>
-<li><a href="#projects">Projects</a></li>
-<li><a href="#stories">Stories</a></li>
-<li><a href="#technologies">Technologies</a></li>
-<li><a href="#contact">Contact</a></li>
-</ul>
+  <img src="logo.png" class="logo" alt="Logo">
+  <ul>
+    <li><a href="#home"><i class="fa fa-house"></i>Home</a></li>
+    <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
+    <li><a href="#journey"><i class="fa fa-road"></i>Journey</a></li>
+    <li><a href="#experience"><i class="fa fa-briefcase"></i>Experience</a></li>
+    <li><a href="#technologies"><i class="fa fa-microchip"></i>Tech</a></li>
+    <li><a href="#contact"><i class="fa fa-envelope"></i>Contact</a></li>
+  </ul>
 </nav>
 
-<!-- HERO -->
 <header id="home">
-<div class="hero-text">
-<h1>Marc <span>Wanjeru</span></h1>
-<p>IT Systems & Web Specialist</p>
-<a class="btn">Download CV</a>
-</div>
+  <div class="hero-text">
+    <h1>Marc <span>Wanjeru</span></h1>
+    <p>IT Systems & Infrastructure Specialist</p>
+    <a class="btn" href="mailto:wanjerumarc@icloud.com?subject=Request Teams Meeting">
+      Request a Teams Meeting
+    </a>
+  </div>
 </header>
 
-<!-- ABOUT -->
-<section id="about" class="fade">
-<h2>About Me</h2>
-<div class="about">
-<p>
-IT Systems Specialist with experience in enterprise IT support, networking,
-cybersecurity, and infrastructure operations.
-</p>
-<img src="image" alt="Profile">
-</div>
-</section>
-
-<!-- JOURNEY -->
 <section id="journey" class="fade">
-<h2>Professional Journey</h2>
-<div class="timeline-journey">
-<div class="timeline-item"><h3>Foundations</h3><p>Hands-on IT support and troubleshooting.</p></div>
-<div class="timeline-item"><h3>Enterprise Growth</h3><p>NGO and logistics infrastructure environments.</p></div>
-<div class="timeline-item"><h3>Systems & Security</h3><p>Infrastructure, networking, and cybersecurity.</p></div>
-</div>
+  <h2>Professional Journey</h2>
+  <div class="timeline-journey">
+    <div class="timeline-item">IT Support Foundations</div>
+    <div class="timeline-item">Enterprise & NGO IT Environments</div>
+    <div class="timeline-item">Infrastructure & Security Roles</div>
+    <div class="timeline-item">Scalable & Secure Systems Focus</div>
+  </div>
 </section>
 
-<!-- PROJECTS -->
-<section id="projects" class="fade">
-<h2>Projects</h2>
-
-<div class="slider-wrapper">
-<button class="slider-arrow left" onclick="scrollSlider('projectsGrid',-1)">‹</button>
-<button class="slider-arrow right" onclick="scrollSlider('projectsGrid',1)">›</button>
-
-<div class="slider-grid" id="projectsGrid">
-
-<div class="project-card">
-<h3>IT Infrastructure Upgrade</h3>
-<p>Designed and deployed LAN, wireless networks, and endpoint security.</p>
-</div>
-
-<div class="project-card">
-<h3>Endpoint Security Deployment</h3>
-<p>Implemented Kaspersky Security Center for enterprise endpoint protection.</p>
-</div>
-
-<div class="project-card">
-<h3>Digital Logistics System</h3>
-<p>Built internal systems to support logistics and procurement operations.</p>
-</div>
-
-<div class="project-card">
-<h3>Microsoft 365 Administration</h3>
-<p>Managed users, permissions, and collaboration tools.</p>
-</div>
-
-</div>
-</div>
-</section>
-
-<!-- STORIES -->
-<section id="stories" class="fade">
-<h2>Stories & Experiences</h2>
-
-<div class="stories">
-
-<div class="story">
-<h3>Working in High-Impact Environments</h3>
-<p>
-Supporting NGO operations taught me how critical system uptime and security
-are when technology directly supports humanitarian work.
-</p>
-</div>
-
-<div class="story">
-<h3>Learning Through Challenges</h3>
-<p>
-From network failures to security incidents, each challenge strengthened my
-problem-solving and decision-making skills.
-</p>
-</div>
-
-<div class="story">
-<h3>Growth Beyond Technical Skills</h3>
-<p>
-Collaborating with diverse teams improved my communication, documentation,
-and leadership abilities.
-</p>
-</div>
-
-</div>
-</section>
-
-<!-- TECHNOLOGIES -->
 <section id="technologies" class="fade">
-<h2>Technologies & Platforms</h2>
+  <h2>Technologies & Platforms</h2>
 
-<div class="slider-wrapper">
-<button class="slider-arrow left" onclick="scrollSlider('techGrid',-1)">‹</button>
-<button class="slider-arrow right" onclick="scrollSlider('techGrid',1)">›</button>
+  <div class="tech-wrapper">
+    <i class="fa fa-chevron-left arrow left" onclick="slide(-1)"></i>
 
-<div class="slider-grid" id="techGrid">
-<a class="tech" href="https://www.cisco.com" target="_blank"><img src="cisco.png"><p>Cisco</p></a>
-<a class="tech" href="https://www.microsoft.com/windows" target="_blank"><img src="windows.png"><p>Windows</p></a>
-<a class="tech" href="https://ubuntu.com" target="_blank"><img src="linux.png"><p>Linux</p></a>
-<a class="tech" href="https://www.microsoft.com/microsoft-365" target="_blank"><img src="microsoft.png"><p>Microsoft 365</p></a>
-<a class="tech" href="https://www.kaspersky.com" target="_blank"><img src="kaspersky.png"><p>Kaspersky</p></a>
-<a class="tech" href="https://www.atlassian.com/software/jira" target="_blank"><img src="jira.png"><p>Jira</p></a>
-</div>
-</div>
+    <div class="tech-slider" id="slider">
+      <a class="tech" href="https://www.cisco.com"><img src="cisco.png"><p>Cisco</p></a>
+      <a class="tech" href="https://www.microsoft.com/windows"><img src="windows.png"><p>Windows</p></a>
+      <a class="tech" href="https://ubuntu.com"><img src="linux.png"><p>Linux</p></a>
+      <a class="tech" href="https://www.microsoft.com/microsoft-365"><img src="microsoft.png"><p>M365</p></a>
+      <a class="tech" href="https://www.kaspersky.com"><img src="kaspersky.png"><p>Kaspersky</p></a>
+      <a class="tech" href="https://www.sophos.com"><img src="sophos.png"><p>Sophos</p></a>
+      <a class="tech" href="https://www.atlassian.com/software/jira"><img src="jira.png"><p>Jira</p></a>
+      <a class="tech" href="https://github.com"><img src="github.png"><p>GitHub</p></a>
+      <a class="tech" href="https://openai.com/chatgpt"><img src="chatgpt.png"><p>ChatGPT</p></a>
+    </div>
+
+    <i class="fa fa-chevron-right arrow right" onclick="slide(1)"></i>
+  </div>
 </section>
 
-<!-- CONTACT -->
 <section id="contact" class="fade">
-<h2>Contact</h2>
-<p>Email: wanjerumarc@icloud.com</p>
-<p>Phone: +256769593704</p>
+  <h2>Contact</h2>
+  <p>Email: wanjerumarc@icloud.com</p>
+
+  <div class="contact-icons">
+    <a href="mailto:wanjerumarc@icloud.com"><i class="fa fa-envelope"></i></a>
+    <a href="https://github.com/Wanjerumarcc"><i class="fa fa-github"></i></a>
+  </div>
 </section>
 
-<!-- FOOTER -->
 <footer>
-<p>© 2026 John Mark Kiritu</p>
-<p><a href="https://www.linkedin.com" target="_blank">🔗 LinkedIn</a></p>
+  © 2026 John Mark Kiritu
 </footer>
 
-<!-- WHATSAPP FLOAT -->
-<a class="whatsapp-float" href="https://wa.me/256769593704" target="_blank">💬</a>
+<a href="https://wa.me/256769593704" class="whatsapp-float">
+  <i class="fa-brands fa-whatsapp"></i>
+</a>
 
-<!-- SCRIPTS -->
 <script>
-const faders=document.querySelectorAll('.fade');
-const observer=new IntersectionObserver(entries=>{
-entries.forEach(e=>{if(e.isIntersecting)e.target.classList.add('show')});
-},{threshold:.2});
-faders.forEach(f=>observer.observe(f));
+  const faders = document.querySelectorAll('.fade');
+  const observer = new IntersectionObserver(entries => {
+    entries.forEach(e => e.isIntersecting && e.target.classList.add('show'));
+  }, { threshold: 0.2 });
+  faders.forEach(f => observer.observe(f));
 
-function scrollSlider(id,direction){
-  document.getElementById(id).scrollLeft+=direction*260;
-}
+  let position = 0;
+  function slide(dir) {
+    position += dir * 200;
+    document.getElementById("slider").style.transform = `translateX(${position}px)`;
+  }
 </script>
 
 </body>
